# serpro-web3-hackathon

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  Procfile  README.md  alembic.ini  application.py  deploy.sh  dev.py  package.json  pyproject.toml  requirements.txt
api/: Procfile  config.py  requirements.txt
api/.ebextensions/: 01_fastapi.config
api/api/: logger.py
api/api/server/: main.py
api/application/: controllers.py
api/application/model/: __init__.py  db.py  mixin.py  score.py
api/application/score/: __init__.py
api/domain/entities/: base.py  loan_transactions.py  score.py
api/domain/shared_ports/: loan_transaction_ports.py  score_ports.py
api/server/: main.py
api/server/api/: router.py
api/server/migrations/: env.py
app/: .env  .env.example  logger.py  package.json  tsconfig.json
app/application/: controllers.py
app/application/model/: __init__.py  db.py  score.py
app/application/score/: __init__.py
app/components/: cta.module.css  loader.tsx  score.tsx  toast.tsx  whitepaper.tsx
app/components/ui/: progress.tsx
app/pages/: _app.tsx  index.tsx
app/server/: main.py
app/services/: api.ts
app/utils/: index.ts
contracts/: hardhat.config.js  package.json
contracts/contracts/: ITPFt.sol  TPFt.sol
contracts/scripts/: deploy.js
contracts/test/: TPFt.js
zkmodel/: load_data.py  transaction_based_score_model.py  yC.npy  zkscore_model.py  zscore.h5  zscore_classifier.h5
zkmodel/model_circuit/: README.md  circuit.circom  circuit.json  circuit.py  prover.js  verification_key.json  zscore_model.zkey
(+39 files in other folders)
